# LLM-instructor

./: .SPEC.md.swp  .gitignore  AGENTS.md  README.md  SPEC.md  TODO.md
backend/: .env.example  README.md  pyproject.toml  setup.cfg
backend/app/: config.py  main.py
backend/app/agent/: teaching_engine.py
backend/app/api/: routes.py  websocket.py
backend/app/db/: crud.py  database.py  models.py
backend/app/execution/: code_reader.py  test_runner.py
backend/app/llm/: local_client.py  router.py
backend/app/rag/: retriever.py
backend/scripts/: run_local.sh
backend/tests/: test_db.py  test_execution_tools.py  test_llm_local.py  test_llm_stream.py  test_rag_stub.py  test_routes.py  test_teaching_engine.py  test_websocket_stream.py
llm-instructor-frontend/: IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json
llm-instructor-frontend/.claude/: ralph-loop.local.md
llm-instructor-frontend/src/: App.css  App.tsx
llm-instructor-frontend/src/components/: Chat.css  Chat.tsx  ProgressSidebar.css  ProgressSidebar.tsx  WelcomeScreen.css  WelcomeScreen.tsx
llm-instructor-frontend/src/hooks/: useWebSocket.ts
llm-instructor-frontend/src/styles/: globals.css
llm-instructor-frontend/src/types/: index.ts
