[project]
name = "llm-instructor-backend"
version = "0.1.0"
description = "LLM Instructor backend"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "pytest>=7.4",
  "httpx>=0.26",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
